--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "jquery": "^3.6.0",
+    "rc-footer": "^0.6.6",
     "react": "^17.0.2",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^17.0.2",
+    "react-items-carousel": "^2.8.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
