--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "jquery": "^3.6.0",
+    "qrcode.react": "^1.0.1",
     "rc-footer": "^0.6.6",
     "react": "^17.0.2",
     "react-coverflow": "^0.2.20",
