--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "qrcode.react": "^1.0.1",
     "rc-footer": "^0.6.6",
