--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:9000",
+  "proxy": "https://pacific-coast-95024.herokuapp.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "qrcode.react": "^1.0.1",
     "rc-footer": "^0.6.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-coverflow": "^0.2.20",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-items-carousel": "^2.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
